--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,12 +5,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  max-width: 413px;
 }
 .card__image {
   height: 413px;
-  width: 413px;
+  width: 100%;
   object-fit: cover;
   display: block;
+  border-radius: 8px;
 }
 .card__like-button {
   background-image: url(../images/Like\ Icon.svg);
@@ -18,4 +20,26 @@
   height: 20px;
   border: none;
   background-color: transparent;
+  padding: 0;
+  margin: 0;
+}
+.card__title {
+  color: #212121;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0%;
+  max-width: 390px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+@media screen and (max-width: 627px) {
+  .card__image {
+    max-height: 288px;
+  }
+  .card__title {
+    max-width: 265px;
+  }
 }
