--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,8 +1,16 @@
 .footer {
+  display: flex;
   width: 100%;
-  height: 16px;
   text-align: center;
-  margin: 60px auto;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 0;
+  margin: 0;
 }
 .footer__text {
+  width: 104px;
+  height: 16px;
+  opacity: 70%;
+  color: #212121;
+  text-wrap: nowrap;
 }
