--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,7 @@
   background-color: #fcf5e5;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
+  font-style: normal;
 }
 .page__section {
   max-width: 1280px;
