--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -2,9 +2,12 @@
   display: flex;
   padding: 34px 0 20px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
+  justify-content: space-between;
 }
 .profile__avatar {
   margin-right: 20px;
+  height: 190px;
+  width: 190px;
 }
 .profile__column {
   display: flex;
@@ -12,12 +15,52 @@
 }
 .profile__name {
   margin: 0 0 12px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 1;
+  letter-spacing: 0%;
+  max-width: 420px;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 .profile__description {
   margin: 0;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0%;
+  color: rgba(33, 33, 33, 0.7);
+  max-width: 420px;
+  display: -webkit-box;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 .profile_edit-button {
   margin-top: auto;
+  width: 100%;
+  height: 16px;
+  display: flex;
+  flex-direction: row;
+  background-color: transparent;
+  text-wrap: nowrap;
+  padding: 0;
+  text-align: center;
+  border: none;
+  opacity: 70%;
+  gap: 8px;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+  letter-spacing: 0%;
+  color: #212121;
 }
 .profile__post-button {
   margin-left: auto;
@@ -26,4 +69,36 @@
   height: 52px;
   width: 149px;
   border-radius: 8px;
+  gap: 8px;
+  align-self: flex-end;
+}
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+  }
+  .profile__avatar {
+    margin-right: 0;
+    height: 80px;
+    width: 80px;
+    margin-bottom: 12px;
+  }
+  .profile_edit-button {
+    justify-content: center;
+    width: 100%;
+    margin: 32px 0 20px;
+  }
+  .profile__post-button {
+    align-self: center;
+    width: 100%;
+  }
+  .profile__description {
+    max-width: 288px;
+  }
+  .profile__name {
+    max-width: 288px;
+  }
 }
