--- a/blocks/card.css
+++ b/blocks/card.css
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: space-between;
   max-width: 413px;
+  margin-top: 12px;
 }
 .card__image {
   height: 413px;
@@ -15,7 +16,7 @@
   border-radius: 8px;
 }
 .card__like-button {
-  background-image: url(../images/Like\ Icon.svg);
+  background-image: url(../images/Union.svg);
   width: 23px;
   height: 20px;
   border: none;
@@ -31,13 +32,14 @@
   color: #212121;
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.2;
   letter-spacing: 0%;
   max-width: 390px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin: 0;
 }
 @media screen and (max-width: 627px) {
   .card__image {
