--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,6 +8,8 @@
   margin-right: 20px;
   height: 190px;
   width: 190px;
+  border-radius: 8px;
+  object-fit: cover;
 }
 .profile__column {
   display: flex;
@@ -42,7 +44,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
-.profile_edit-button {
+.profile__edit-button {
   margin-top: auto;
   width: 100%;
   height: 16px;
@@ -61,6 +63,7 @@
   line-height: 1;
   letter-spacing: 0%;
   color: #212121;
+  cursor: pointer;
 }
 .profile_edit-button:hover {
   opacity: 100%;
@@ -74,6 +77,8 @@
   border-radius: 8px;
   gap: 8px;
   align-self: flex-end;
+  cursor: pointer;
+  border: none;
 }
 .profile__post-button:hover {
   opacity: 80%;
