--- a/blocks/card.css
+++ b/blocks/card.css
@@ -24,6 +24,7 @@
   padding: 0;
   margin: 0;
   opacity: 40%;
+  cursor: pointer;
 }
 .card__like-button:hover {
   opacity: 100%;
@@ -33,9 +34,10 @@
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 16px;
+  font-size: 20px;
   line-height: 1.2;
-  letter-spacing: 0%;
-  max-width: 390px;
+
+  max-width: 350px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
